i added register form

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.thymeleaf.cache=false
 security.user.name=admin
 security.user.password=admin
 security.user.role=ADMIN
-security.ignored=/**
+#security.ignored=/**
