before new login register design

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.thymeleaf.cache=false
 
 security.user.name=admin
 security.user.password=admin
-security.user.role=ADMIN
-#security.ignored=/**
+security.user.role=ADMIN, USER
+security.ignored=/**
