--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ security.user.name=admin
 security.user.password=admin
 security.user.role=ADMIN, USER
 #security.ignored=/**
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = tomek526@gmail.com
+spring.mail.password = tomekzieba526
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
