--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>5.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>4.3.14.RELEASE</version>
 		</dependency>
 	</dependencies>
-
 
 	<build>
 		<plugins>
