--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ security.user.role=ADMIN, USER
 #security.ignored=/**
 
 spring.mail.host = smtp.gmail.com
-spring.mail.username = tomek526@gmail.com
-spring.mail.password = tomekzieba526
+spring.mail.username = sss@gmail.com
+spring.mail.password = pass
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable = true
